Attempted fix to URL stretching table issue

--- a/src/css/search-bar.css
+++ b/src/css/search-bar.css
@@ -58,7 +58,13 @@ a,a:visited {
   padding: 6px; 
   border: 1px solid #ccc; 
   text-align: left; 
-  word-wrap: break-word;
+  
+	-ms-word-break: break-all;
+	/* Non standard for webkit */
+	word-break: break-word;
+	-webkit-hyphens: auto;
+	-moz-hyphens: auto;
+	hyphens: auto;
 }
 
 .rssFeedContainer {
